# formalized-symbolic-dynamics

./: .gitignore  CLAUDE.md  ONTOLOGY_PLAN.md  ROADMAP.md  RUNNING_CLAUDE.md  formalization_plan.txt  hochman_meyerovitch_implementation_list.md  implementation_list.md  todo.md
.claude/: settings.json
.claude/hooks/: bash-guard.sh  edit-guard.sh  notify.sh  post-lean-edit.sh  stop-verify.sh
SymbolicDynamics/: README.md  SymbolicDynamics.lean  lake-manifest.json  lakefile.toml
SymbolicDynamics/SymbolicDynamics/: Basic.lean  HochmanMeyerovitch.lean
SymbolicDynamics/SymbolicDynamics/Dependencies/: ComputableRat.lean
SymbolicDynamics/axioms/: Computability.lean  DGG.lean  InvariantMeasure.lean  Irreducible.lean  KariCulik.lean
SymbolicDynamics/dependencies/: AdmPredPrimrec.lean  Computable.lean  ComputableRat.lean  DGG.lean  Entropy.lean  FactorMap.lean  GloballyAdmissible.lean  InvMeasureCompactness.lean  InvariantMeasure.lean  IrreducibleConsequences.lean  KariCulik.lean  LocallyAdmissible.lean  NbarComputable.lean  Percolation.lean  RatLogApprox.lean  Subshift.lean
SymbolicDynamics/docs/: METHODOLOGY.md
SymbolicDynamics/openProblems/: README.md
SymbolicDynamics/openProblems/KariCulikEntropy/: KariCulikEntropy.lean  README.md
SymbolicDynamics/openProblems/KariCulikEntropy/generated_questions/: Algebraicity.lean  Computability.lean  DGGQ1.lean  DGGQ2.lean  DGGQ3.lean  README.md
SymbolicDynamics/openProblems/OddShiftSoficity/: OddShiftSoficity.lean  README.md  formalization_plan.md  implementation_list.md
SymbolicDynamics/openProblems/OddShiftSoficity/generated_questions/: README.md
SymbolicDynamics/openProblems/WeissConjecture/: README.md  WeissConjecture.lean  formalization_plan.md  implementation_list.md
SymbolicDynamics/openProblems/WeissConjecture/generated_questions/: README.md
SymbolicDynamics/papers/: README.md
SymbolicDynamics/papers/DurandGamardGrandjean/: DGG.lean  README.md
SymbolicDynamics/papers/HochmanMeyerovitch/: HochmanMeyerovitch.lean  OpenProblems.lean  README.md  implementation_list.md
SymbolicDynamics/trajectories/: README.md
SymbolicDynamics/trajectories/KariCulikEntropyComputableStatement/: Attempt_1_rightRE_via_HM.lean
mcp-tools/: .gitignore  CLAUDE.md  README.md  pyproject.toml
mcp-tools/scripts/: check-mcp.py  reload-mcp.py  setup-mcp.py
mcp-tools/servers/symdyn-complexity/: pyproject.toml
mcp-tools/servers/symdyn-complexity/src/symdyn_complexity/: complexity.py  server.py
mcp-tools/servers/symdyn-complexity/tests/: test_smoke.py
mcp-tools/servers/symdyn-shifts/: pyproject.toml
mcp-tools/servers/symdyn-shifts/src/symdyn_shifts/: lean_emit.py  server.py  sft1d.py
mcp-tools/servers/symdyn-shifts/tests/: test_smoke.py
mcp-tools/servers/symdyn-tilings/: pyproject.toml
mcp-tools/servers/symdyn-tilings/src/symdyn_tilings/: lean_emit.py  server.py  tileability.py  tilesets.py  transfer.py
mcp-tools/servers/symdyn-tilings/tests/: test_smoke.py
mcp-tools/servers/symdyn-viz/: pyproject.toml
mcp-tools/servers/symdyn-viz/src/symdyn_viz/: draw.py  server.py
mcp-tools/servers/symdyn-viz/tests/: test_smoke.py
ontology/: README.md  pyproject.toml
ontology/gold/: 1312.4126_dgg_paper.subgraph.json  1312.4126_kc_bootstrap.subgraph.json  PILOT.md  build_dgg_gold.py  build_hm_gold.py  build_kari_culik_bootstrap.py  math_0703206.subgraph.json
ontology/ontology/: __init__.py  acquire.py  cli.py  dedup.py  embed.py  export.py  extract.py  formalize.py  harvest.py  lints.py  merge.py  normalize.py  schema.py  store.py  sync_lean.py
ontology/reviews/: G3_merge_queue.jsonl
ontology/scripts/: seed_pilot.py
ontology/snapshots/: edges.jsonl  manifest.json  merges.jsonl  nodes.jsonl  papers.jsonl
ontology/tests/: test_pipeline.py
scripts/: check_symbolic_dynamics_policy.sh
